--- a/hugo.toml
+++ b/hugo.toml
@@ -72,7 +72,7 @@ enableMissingTranslationPlaceholders = false
 
     [[menu.main]]
         name = "Map"
-        url = "./images/maps/tuummundis.png"
+        url = "/images/maps/tuummundis.png"
         weight = 2
         identifier = 'map'
 
